# lynx-vello

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
crates/bobcat-engine/: Cargo.toml
crates/bobcat-engine/src/: lib.rs  resource.rs  script.rs  view.rs
crates/bobcat-engine/tests/: impl_smoke.rs
crates/bobcat-quickjs/: Cargo.toml
crates/bobcat-quickjs/src/: lib.rs  tests.rs
crates/bobcat-quickjs/tests/: integration.rs  public_api.rs
crates/lynx-dom/: Cargo.toml
crates/lynx-dom/src/: arena.rs  dirty.rs  lib.rs  node.rs  papi.rs  state.rs  tag.rs
crates/lynx-dom/src/stylo_dom/: document.rs  element.rs  mod.rs  node.rs  selector.rs
crates/lynx-dom/tests/: dom.rs
crates/lynx-layout/: Cargo.toml  README.md
crates/lynx-layout/benches/: linear.rs
crates/lynx-layout/benches/scenarios/: linear.rs
crates/lynx-layout/src/: lib.rs  linear.rs  style.rs  tree.rs
crates/lynx-layout/tests/: linear.rs  linear_bench_scenarios.rs
crates/lynx-layout/tests/support/: mod.rs
crates/lynx-style/: Cargo.toml
crates/lynx-style/src/: device.rs  lib.rs
crates/lynx-style/tests/: engine.rs
crates/lynx-template-converter/: Cargo.toml
crates/lynx-template-converter/examples/: convert.rs
crates/lynx-template-converter/src/: error.rs  lib.rs  native.rs  reader.rs  style.rs  tokenize.rs  web.rs
crates/lynx-template-converter/tests/: conversion.rs
crates/lynx-template-decoder/: Cargo.toml
crates/lynx-template-decoder/benches/: decode.rs
crates/lynx-template-decoder/examples/: dump.rs
crates/lynx-template-decoder/src/: css_property.rs  error.rs  lib.rs  reader.rs  sections.rs  style_info.rs
crates/lynx-template-decoder/tests/: decode_web_bundle.rs
crates/lynx-template-decoder/tests/fixtures/: README.md  basic-bindtap.web.bundle  basic-class-selector.web.bundle  basic-performance-large-css.web.bundle  config-lazy-component-css.web.bundle
crates/lynx-widget/: Cargo.toml
crates/lynx-widget/benches/: style.rs
crates/lynx-widget/src/: handle.rs  ingest.rs  kind.rs  lib.rs  papi.rs  state.rs  style.rs  ua.rs
crates/lynx-widget/tests/: dom.rs  flush.rs  style.rs
crates/neutron-star/: Cargo.toml  README.md
crates/neutron-star/benches/: README.md  containment.rs  flexbox.rs  grid.rs  grid_pr25.rs  linear.rs  linear_pr25.rs  relative.rs  relative_pr25.rs  text.rs
crates/neutron-star/benches/scenarios/: flexbox.rs  grid.rs  linear.rs  linear_pr25.rs  relative.rs
crates/neutron-star/benches/support/: mod.rs
crates/neutron-star/src/: cache.rs  geometry.rs  invalidate.rs  lib.rs
crates/neutron-star/src/compute/: flexbox.rs  leaf.rs  linear.rs  mod.rs  relative.rs  single_axis.rs  support.rs  util.rs
crates/neutron-star/src/style/: alignment.rs  containment.rs  flex.rs  grid.rs  linear.rs  mod.rs  relative.rs  text.rs  value.rs
crates/neutron-star/src/text/: content.rs  context.rs  layout.rs  measure.rs  mod.rs
crates/neutron-star/src/tree/: io.rs  mod.rs
crates/neutron-star/tests/: containment.rs  flexbox.rs  flexbox_bench_scenarios.rs  grid.rs  grid_bench_scenarios.rs  linear.rs  linear_bench_scenarios.rs  pr25_block_as_linear.rs  pr25_flex_additional.rs  pr25_flex_internal.rs  pr25_flex_inventory.rs  pr25_flex_layout.rs  pr25_flex_public.rs  pr25_flex_standalone.rs  pr25_generated_flex.rs  pr25_generated_grid.rs  pr25_generated_linear.rs  pr25_generated_relative.rs  pr25_grid_additional.rs  pr25_grid_inventory.rs  pr25_grid_layout.rs  pr25_grid_standalone.rs  pr25_linear_additional.rs  pr25_linear_bench_scenarios.rs  pr25_linear_external_callback.rs  pr25_linear_inventory.rs  pr25_linear_layout.rs  pr25_linear_public.rs  pr25_linear_standalone.rs  pr25_linear_standalone_inventory.txt  pr25_native_flex.rs  pr25_native_grid.rs  pr25_native_linear.rs  pr25_native_linear_exact.rs  pr25_native_linear_inventory.txt  pr25_native_relative.rs  pr25_relative_additional.rs  pr25_relative_inventory.rs  pr25_relative_layout.rs  pr25_relative_public.rs  (+5 more)
crates/neutron-star/tests/fixtures/: Ahem.LICENSE.md  README.md
crates/neutron-star/tests/linear_support/: mod.rs
crates/neutron-star/tests/pr25_generated_linear_support/: mod.rs
crates/neutron-star/tests/pr25_linear_standalone_support/: mod.rs
crates/neutron-star/tests/pr25_support/: mod.rs
crates/neutron-star/tests/support/: mod.rs
crates/quickjs-rust-bridge/: Cargo.toml  build.rs
crates/quickjs-rust-bridge/src/: bobcat.rs  ffi.rs  lib.rs  shim.c
crates/quickjs-rust-bridge/tests/: bobcat.rs
crates/reactlynx-decoder/: Cargo.toml
crates/reactlynx-decoder/src/: container.rs  error.rs  lib.rs  model.rs  reader.rs  value.rs  version.rs
crates/reactlynx-decoder/src/container/: compile_options.rs  header.rs  header_ext_info.rs  mod.rs  section_route.rs
crates/reactlynx-decoder/src/model/: element.rs  style.rs
crates/reactlynx-decoder/tests/: minimal_bundle.rs
crates/stylo-dom/: Cargo.toml
crates/stylo-dom/benches/: css.rs
crates/stylo-dom/src/: arena.rs  data.rs  dirty.rs  element.rs  ext.rs  flush.rs  inline.rs  kind.rs  lib.rs  node.rs  state.rs  style.rs  tree.rs  widget.rs
crates/stylo-dom/tests/: at_rules.rs  cascade_rules.rs  color.rs  custom_properties.rs  grammar_animation.rs  grammar_background.rs  grammar_border_effects.rs  grammar_layout.rs  grammar_transform.rs  grammar_values.rs  harness_smoke.rs  inheritance_computed.rs  invalidation.rs  layout_session.rs  media_queries.rs  primitives.rs  selectors.rs  style.rs
crates/w3c-dom/: Cargo.toml
crates/w3c-dom/benches/: css.rs
crates/w3c-dom/src/: contain.rs  damage.rs  document.rs  engine.rs  ext.rs  flush.rs  invalidation.rs  lib.rs  node.rs  traits.rs
crates/w3c-dom/tests/: at_rules.rs  cascade_rules.rs  color.rs  containment.rs  custom_properties.rs  damage.rs  grammar_animation.rs  grammar_background.rs  grammar_border_effects.rs  grammar_layout.rs  grammar_transform.rs  grammar_values.rs  harness_smoke.rs  inheritance_computed.rs  invalidation.rs  layout.rs  media_queries.rs  primitives.rs  selectors.rs  style.rs  supports.rs  visual.rs
(+93 files in other folders)
