[workspace]
resolver = "3"
members = ["crates/*"]
# `vendor/stylo` is the Lynx-patched stylo fork, itself a Cargo workspace. Our
# crates consume it via path dependencies, but it must stay its *own* workspace
# so its members' `workspace = true` deps (e.g. `to_shmem`) inherit from
# `vendor/stylo/Cargo.toml`, not from here.
exclude = ["vendor/stylo"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/akiwah/lynx-vello"
rust-version = "1.95"

[workspace.dependencies]
# Intra-workspace crates
bobcat-engine = { path = "crates/bobcat-engine" }
bobcat-quickjs = { path = "crates/bobcat-quickjs" }
lynx-template-decoder = { path = "crates/lynx-template-decoder" }
lynx-widget = { path = "crates/lynx-widget" }
neutron-star = { path = "crates/neutron-star" }
quickjs-rust-bridge = { path = "crates/quickjs-rust-bridge" }
stylo-dom = { path = "crates/stylo-dom" }

# The Lynx-patched stylo fork (git submodule; see AGENTS.md dependency
# policy). The `lynx` branch carries the Lynx patch series (viewport-relative
# rpx, display:linear|relative, linear-*/relative-*/-x-* longhands) and
# is rebased onto upstream stylo releases.
#
# We enable the fork's `lynx` cargo feature workspace-wide: it turns stylo into
# Lynx's CSS engine — enabling those Lynx-only additions AND disabling the CSS
# properties and keyword values Lynx does not support (so, e.g., `float`,
# `writing-mode` or `overflow: clip` stop parsing). `lynx` implies `servo`.
#
# The vendored servo package is itself named `stylo_dom`; that name is taken
# here by our `crates/stylo-dom` (which re-exports `ElementState`), so the
# vendored crate is aliased `dom` — the same rename `vendor/stylo/style`'s own
# Cargo.toml uses. Only `crates/stylo-dom` depends on it directly.
stylo = { path = "vendor/stylo/style", package = "stylo", features = ["lynx"] }
stylo_atoms = { path = "vendor/stylo/stylo_atoms" }
dom = { path = "vendor/stylo/stylo_dom", package = "stylo_dom" }
stylo_traits = { path = "vendor/stylo/style_traits", package = "stylo_traits" }
selectors = { path = "vendor/stylo/selectors" }
servo_arc = { path = "vendor/stylo/servo_arc" }

# The embedded JavaScript engine is pinned as a git submodule rather than a
# Cargo package. `quickjs-rust-bridge` compiles the C core directly and keeps
# all ABI-sensitive `JSValue` handling behind a C shim. `bobcat-quickjs` owns
# the higher-level Bobcat adapter and runtime composition policy.

# Third-party
#
# `app_units`, `euclid`, and `url` are pinned to the same
# major/minor the vendored stylo fork depends on (`vendor/stylo/style/Cargo.toml`)
# so Cargo unifies them to a single version and the stylo trait signatures line
# up type-for-type (no duplicate `euclid`/`app_units` in the graph).
app_units = "0.7"
bytecheck = "0.6"
bytes = "1"
cc = "1"
cssparser = "0.37"
divan = { package = "codspeed-divan-compat", version = "5" }
euclid = "0.22"
http = "1"
parley = { version = "0.11", default-features = false, features = [
    "std",
    "system",
    "complex-scripts",
] }
rkyv = { version = "0.7", features = ["validation"] }
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
thiserror = "2"
tokio = "1"
tokio-util = "0.7"
url = "2"

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(coverage)",
    "cfg(coverage_nightly)",
] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
