[package]
name = "lynx-dom"
description = "Native Rust element/DOM layer for the Lynx web-bundle runtime: a generational-arena document tree plus the snake_case Element PAPI surface that the lynx-style crate drives stylo over"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustc-hash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

# stylo integration: the node struct owns stylo's interior-mutable per-element
# state (ElementData/selector flags) and the `stylo_dom` module implements
# stylo's element traits (`TNode`/`TElement`/`TDocument`/`selectors::Element`)
# on `ElemRef`.
stylo = { workspace = true }
stylo_atoms = { workspace = true }
stylo_dom = { workspace = true }
stylo_traits = { workspace = true }
selectors = { workspace = true }
app_units = { workspace = true }
atomic_refcell = { workspace = true }
euclid = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
