[package]
name = "lynx-dom"
description = "Widget Element-PAPI layer for the Lynx web-bundle runtime: the snake_case Element PAPI surface (WidgetTree) that validates opcode semantics and drives the stylo-dom crate's tree + inline-style primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# The stylo-integration DOM machinery (Widget arena, tree/inline primitives,
# stylo element-trait impls). Its vocabulary is re-exported from this crate.
stylo-dom = { workspace = true }

rustc-hash = { workspace = true }
thiserror = { workspace = true }

# The PAPI layer still names a few stylo types directly: computed-style
# write-back (`Arc<ComputedValues>`), the shared lock / base URL it forwards to
# the arena, and interned class/id atoms.
stylo = { workspace = true }
stylo_atoms = { workspace = true }

[lints]
workspace = true
