[package]
name = "lynx-style"
description = "CSS style engine for the Lynx web-bundle runtime: drives the vendored stylo fork's cascade over lynx-widget to produce per-widget computed styles (the viewport-relative rpx unit and display:linear included)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
lynx-widget = { workspace = true }

stylo = { workspace = true }
stylo_traits = { workspace = true }
selectors = { workspace = true }
app_units = { workspace = true }
cssparser = "0.37"
euclid = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
