[package]
name = "lynx-template-decoder"
description = "Native Rust decoder for the Lynx web binary template (.web.bundle, the SDRA/WROF format consumed by the LynxJS web platform target)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytecheck = { workspace = true }
rkyv = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
