[package]
name = "lynx-widget"
description = "Lynx Widget/PAPI and Lynx-specific style-device integration over w3c-dom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# The generic, W3C-DOM-subset core (the one `Document<T>` tree of `Node<T>`s,
# invalidation-carrying mutation, stylo element-trait impls). This crate
# instantiates it with `WidgetState` and re-exports the result Widget-first.
w3c-dom = { workspace = true }

rustc-hash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
euclid = { workspace = true }

# The .web.bundle wire format: `StyleInfo` ingestion lowers its decoded
# rules straight into stylo objects (see `src/ingest.rs`).
lynx-template-decoder = { workspace = true }

# The Lynx adapter names computed values, Device metrics, atoms, and
# `ExternalState` attribute names directly. Lock ownership and the cascade
# remain encapsulated by `w3c-dom`.
stylo = { workspace = true }
stylo_atoms = { workspace = true }
stylo_traits = { workspace = true }

[dev-dependencies]
app_units = { workspace = true }
divan = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "style"
harness = false
