[package]
name = "neutron-star"
description = "Statically-dispatched CSS Flex/Grid and Starlight Linear/Relative layout for host-owned trees"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["layout", "flexbox", "grid", "css", "ui"]
categories = ["gui"]

# The protocol and box-layout core remain dependency-free when default features
# are disabled. Default builds enable the optional Parley-backed text
# measurement core.
[features]
default = ["text"]
text = ["dep:parley"]

[dependencies]
parley = { workspace = true, optional = true }
stylo = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
style_traits = { workspace = true }

[[test]]
name = "text"
required-features = ["text"]

[[bench]]
name = "flexbox"
harness = false

[lints]
workspace = true

[[bench]]
name = "grid"
harness = false

[[bench]]
name = "relative"
harness = false

[[bench]]
name = "linear"
harness = false

[[bench]]
name = "text"
harness = false
required-features = ["text"]
