[package]
name = "neutron-star"
description = "Statically-dispatched CSS Flex/Grid and Starlight Linear/Relative layout for host-owned trees"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["layout", "flexbox", "grid", "css", "ui"]
categories = ["gui"]

# The style protocol requires the workspace's stylo fork unconditionally.
# Default builds additionally enable the optional Parley-backed text
# measurement core; default-features = false keeps the protocol and
# box-layout core only.
[features]
default = ["text"]
text = ["dep:parley"]

[dependencies]
parley = { workspace = true, optional = true }
stylo = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
euclid = { workspace = true }
style_traits = { workspace = true }
# Dev-only reverse edge: benchmarks exercise this crate through the concrete
# production document host instead of a benchmark-owned LayoutNode.
w3c-dom = { workspace = true }

[[test]]
name = "text"
required-features = ["text"]

[[bench]]
name = "flexbox"
harness = false

[lints]
workspace = true

[[bench]]
name = "grid"
harness = false

[[bench]]
name = "relative"
harness = false

[[bench]]
name = "linear"
harness = false

[[bench]]
name = "text"
harness = false
required-features = ["text"]
