[package]
name = "neutron-star"
description = "Statically-dispatched CSS Flex/Grid and Starlight Linear/Relative layout for host-owned trees"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["layout", "flexbox", "grid", "css", "ui"]
categories = ["gui"]

# Parley is an unconditional part of the closed leaf model. The only feature
# is a non-production seam used by the engine's integration-test hosts.
[features]
layout-test-utils = []

[dependencies]
parley = { workspace = true }
smallvec = { workspace = true }
stylo = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
euclid = { workspace = true }
style_traits = { workspace = true }
# Dev-only reverse edge: benchmarks exercise this crate through the concrete
# production document host instead of a benchmark-owned LayoutNode.
w3c-dom = { workspace = true, features = ["layout-test-utils"] }

[[bench]]
name = "flexbox"
harness = false

[lints]
workspace = true

[[bench]]
name = "grid"
harness = false

[[bench]]
name = "relative"
harness = false

[[bench]]
name = "linear"
harness = false

[[bench]]
name = "containment"
harness = false

[[bench]]
name = "text"
harness = false
