[package]
name = "quickjs-rust-bridge"
description = "Owner-thread-bound QuickJS bridge and Bobcat ScriptEngine adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
links = "quickjs"

[dependencies]
bobcat-engine = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[lints]
workspace = true
