[package]
name = "quickjs-rust-bridge"
description = "Owner-thread-bound safe Rust bridge for the pinned QuickJS runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
links = "quickjs"

[build-dependencies]
cc = { workspace = true }

[lints]
workspace = true
