[package]
name = "stylo-dom"
description = "Generic DOM and standards-oriented CSS computation core over stylo, parameterized by embedder state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustc-hash = { workspace = true }
slab = { workspace = true }
smallvec = { workspace = true }

# stylo integration: the Node struct owns stylo's interior-mutable per-element
# state (ElementData/selector flags) and the `traits` module
# implements stylo's element traits (`TNode`/`TElement`/`TDocument`/
# `selectors::Element`) directly on `&Node<T>`. The vendored servo package is itself
# named `stylo_dom`; we depend on it under the `dom` rename (as
# vendor/stylo/style's own Cargo.toml does) so this crate can take the
# `stylo_dom` lib name and re-export `ElementState`.
stylo = { workspace = true }
stylo_atoms = { workspace = true }
dom = { workspace = true }
stylo_traits = { workspace = true }
selectors = { workspace = true }
app_units = { workspace = true }
cssparser = { workspace = true }
euclid = { workspace = true }
url = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "css"
harness = false

[lints]
workspace = true
